# put-it-all-here

./: .gitmodules  README.md
artificial-intelligence/: .gitignore  README.md
artificial-intelligence/neural-network/: from-scratch.ipynb  mlp.ipynb
awk-regex-basics/: README.md
building-info/: README.md  pom.xml
cpp-class-to-h-and-cpp/: .gitignore  cpp-class-to-h-and-cpp.sh
cryptography/: README.md
dna-sequencing/: go.mod  main.go
docker-fun/: README.md  docker-compose.yml
functional-programming/: README.md
lex-basics/: README.md
male-female-recognition-by-voice/: LICENSE  README.md  main.py  test_main.py
network-programming/: CMakeLists.txt  README.md
network-programming/base/client/: main.cpp
network-programming/base/client-udp/: main.cpp
network-programming/base/server-tcp/: main.cpp
network-programming/base/server-udp/: main.cpp
network-programming/dns-translate/client-tcp-dns/: main.cpp
network-programming/dns-translate/translate-dns-old/: main.cpp
network-programming/multi/epoll-client/: main.cpp
network-programming/multi/poll-client/: main.cpp
network-programming/multi/therads/multi-thread-client/: main.cpp
network-programming/multi/therads/multi-thread-server/: main.cpp
network-programming/non-blocking-server/: main.cpp
nyc-accidents-analysis/: hive.sql  mapper.py  reducer.py  runner.sh
obstacle-avoider/: README.md  constants.h  obstacle-avoider.ino
paintball-game/: Makefile  global.h  log.h  main.c  packet.c  packet.h  recv.c  recv.h  utils.c  utils.h
paraller-programming/opencl/: CMakeLists.txt
paraller-programming/opencl/mat-mul/: main.c  mul.cl
paraller-programming/opencl/vadd/: main.c  vadd.cl
system-programming/: CMakeLists.txt  README.md
system-programming/files/: file_size.c  files_coping.c  files_coping_revert.cpp  files_revert.cpp  files_size.c
system-programming/processes/: semaphores_and_processes.c
system-programming/readers-and-writers-problem/: books.c  readers-and-writers.c
system-programming/roller-coaster/: README.md  roller-coaster.c
system-programming/signal/: catch-signal.c  signal.c
system-programming/thread/: mutex_thread.c
(+199 files in other folders)
